extern/PICM114GL/include/PCI_M114.h

// Error Table
enum {
    ERR_NoError                   =  0, 
    ERR_OpenCardFailed            =  -14801, 
    ERR_MapMemoryFailed           =  -14802, 
    ERR_CardNumberRepeated        =  -14803, 
    ERR_CardNotExist              =  -14804, 
    ERR_CardNotInitYet            =  -14805, 
    ERR_LoadLibraryFailed         =  -14806, 
    ERR_OpenMNetFailed            =  -14807, 
    ERR_InvalidCardNumber         =  -14808, 
    ERR_InvalidAxisNumber         =  -14809, 
    ERR_InvalidParameter1         =  -14810, 
    ERR_InvalidParameter2         =  -14811, 
    ERR_InvalidParameter3         =  -14812, 
    ERR_InvalidParameter4         =  -14813, 
    ERR_InvalidParameter5         =  -14814, 
    ERR_InvalidParameter6         =  -14815, 
    ERR_InvalidParameter7         =  -14816, 
    ERR_InvalidParameter8         =  -14817, 
    ERR_InvalidParameter9         =  -14818, 
    ERR_InvalidParameter10        =  -14819, 
    ERR_InvalidParameter11        =  -14820, 
    ERR_InvalidParameter12        =  -14821, 
    ERR_SlowDownPointError        =  -14822, 
    ERR_Err3PointsInput           =  -14823, 
    ERR_GetCenterFailed           =  -14824, 
    ERR_CompareBufferFull         =  -14825, 
    ERR_AxisNotStoppedYet         =  -14826, 
    ERR_ObsoleteFunction          =  -14827, 
    ERR_GetSecureIdFailed         =  -14828, 
    ERR_GenAesKeyFailed           =  -14829, 
	ERR_NotSupported              =  -14830, 
    ERR_SetAutoCmpFifoFailed      =  -14831, 
    ERR_InvalidBoardID            =  -14832, 
    ERR_LoadFileFailed            =  -14833, 
    ERR_SetInterruptFailed        =  -14834, 
    ERR_WaitInterruptFailed       =  -14835, 
    ERR_WaitInterruptTimeout      =  -14836, 
};
// Card Type
enum {
    CARD_UNKNOWN    = 0, 
    CARD_PCI_M114   = 1, 
    CARD_PCI_M114GH = 2,
    CARD_PCI_M114GM = 3,
    CARD_PCI_M114GL = 4,  
    CARD_PCE_M114   = 5,
    CARD_PCE_M114GH = 6,
    CARD_PCE_M114GM = 7,
    CARD_PCE_M114GL = 8,
    CARD_PCI_M118GL = 10, 
    CARD_PCE_M118GL = 12, 
};
// Initialization
I16 PASCAL _m114_open(U16 *existcards);
I16 PASCAL _m114_close();
I16 PASCAL _m114_initial(U16 SwitchCardNo);
I16 PASCAL _m114_get_switch_card_num(U16 CardIndex, U16 *SwitchCardNo);
I16 PASCAL _m114_check_switch_card_num(U16 SwitchCardNo, U8 *IsExist);
I16 PASCAL _m114_get_card_type(U16 SwitchCardNo, U8 *CardType);
I16 PASCAL _m114_get_cpld_version(U16 SwitchCardNo, U16 *CpldVer);
I16 PASCAL _m114_config_from_file(U16 SwitchCardNo, char *FilePath);
// Motionnet
I16 PASCAL _m114_set_ring_config(U16 SwitchCardNo, U16 RingOfCard, U8 BaudRate);
I16 PASCAL _m114_open_mnet(U16 SwitchCardNo);
I16 PASCAL _m114_get_start_ring_num(U16 SwitchCardNo, U16 *RingNo);
// GPIO
I16 PASCAL _m114_get_axis_input(U16 SwitchCardNo, U16 AxisNo, U16 *OnOff);
I16 PASCAL _m114_get_axis_output(U16 SwitchCardNo, U16 AxisNo, U16 *OnOff);
I16 PASCAL _m114_set_axis_output(U16 SwitchCardNo, U16 AxisNo, U16 OnOff);
I16 PASCAL _m114_toggle_axis_output(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_start_axis_output(U16 SwitchCardNo, U16 AxisNo, U16 OnTime, U16 OffTime, U16 Count);
I16 PASCAL _m114_stop_axis_output(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_get_axis_output_count(U16 SwitchCardNo, U16 AxisNo, U16 *Count);
// Security
I16 PASCAL _m114_get_secure_id(U16 SwitchCardNo, U8 SecureID[8]);
I16 PASCAL _m114_gen_aes_key(U16 SwitchCardNo, U8 SI_Key[16], U8 SecureID[8], U8 AES_Key[16]);
I16 PASCAL _m114_check_aes_key(U16 SwitchCardNo, U8 SI_Key[16], U8 AES_Key[16], U8* Validity);
// Interface I/O Configuration
I16 PASCAL _m114_set_alm(U16 SwitchCardNo, U16 AxisNo, I16 alm_logic, I16 alm_mode);
I16 PASCAL _m114_set_inp(U16 SwitchCardNo, U16 AxisNo, I16 inp_enable, I16 inp_logic);
I16 PASCAL _m114_set_erc(U16 SwitchCardNo, U16 AxisNo, I16 erc_logic, I16 erc_on_time);
I16 PASCAL _m114_set_auto_erc(U16 SwitchCardNo, U16 AxisNo, I16 enable);
I16 PASCAL _m114_set_erc_on(U16 SwitchCardNo, U16 AxisNo, I16 on_off);
I16 PASCAL _m114_set_servo(U16 SwitchCardNo, U16 AxisNo, I16 on_off);
I16 PASCAL _m114_set_ralm(U16 SwitchCardNo, U16 AxisNo, I16 on_off);
  
I16 PASCAL _m114_set_ell(U16 SwitchCardNo, U16 AxisNo, I16 ell_logic, I16 ell_mode);
I16 PASCAL _m114_set_sd(U16 SwitchCardNo, U16 AxisNo, I16 enable, I16 sd_logic, I16 sd_latch, I16 sd_mode);
I16 PASCAL _m114_set_mechanical_input_filter(U16 SwitchCardNo, U16 AxisNo, U16 ON_OFF);
// Pulse I/O Configuration
I16 PASCAL _m114_set_pls_outmode(U16 SwitchCardNo, U16 AxisNo, I16 pls_outmode);
I16 PASCAL _m114_set_pls_iptmode(U16 SwitchCardNo, U16 AxisNo, I16 pls_iptmode, I16 pls_logic);
I16 PASCAL _m114_set_feedback_src(U16 SwitchCardNo, U16 AxisNo, I16 Src);
I16 PASCAL _m114_set_abs_reference(U16 SwitchCardNo, U16 AxisNo, I16 Ref);
I16 PASCAL _m114_backlash_comp(U16 SwitchCardNo, U16 AxisNo, I16 CompPulse);
// Status
I16 PASCAL _m114_motion_done(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_get_io_status(U16 SwitchCardNo, U16 AxisNo, U16 *io_sts);
I16 PASCAL _m114_check_error(U16 SwitchCardNo, U16 AxisNo, U32 *error);
// Stop
I16 PASCAL _m114_sd_stop(U16 SwitchCardNo, U16 AxisNo, F32 Tdec);
I16 PASCAL _m114_imd_stop(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_emg_stop(U16 SwitchCardNo, U16 AxisNo);
// Homing 
I16 PASCAL _m114_set_home_config(U16 SwitchCardNo, U16 AxisNo, I16 home_mode, I16 org_logic, I16 ez_logic, I16 ez_count, I16 erc_out);
I16 PASCAL _m114_home_move(U16 SwitchCardNo, U16 AxisNo, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc);
I16 PASCAL _m114_home_search(U16 SwitchCardNo, U16 AxisNo, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, I32 ORGOffset);
I16 PASCAL _m114_escape_home(U16 SwitchCardNo, U16 AxisNo, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc);
I16 PASCAL _m114_search_ez(U16 SwitchCardNo, U16 AxisNo, U8 Dir, U8 EzCount, U32 StrVel, U32 MaxVel, F32 Tacc);
I16 PASCAL _m114_jog_switch_continue(U16 SwitchCardNo, U16 AxisNo, U8 switch_logic, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_jog_switch_step(U16 SwitchCardNo, U16 AxisNo, U8 switch_logic, I32 Step, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_jog_pulser_step(U16 SwitchCardNo, U16 AxisNo, U8 pulser_Dir, U8 Step, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_jog_stop(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_get_jogio_status(U16 SwitchCardNo, U16 AxisNo, U16 *jogio_sts);